--- a/hiroshimAR/hiroshimaKML-Info.plist
+++ b/hiroshimAR/hiroshimaKML-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>ja_JP</string>
 	<key>CFBundleDisplayName</key>
-	<string>1964AR</string>
+	<string>hiroshimAR</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
@@ -15,15 +15,15 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>1964AR</string>
+	<string>hiroshimAR</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.0</string>
+	<string>5.0.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.1</string>
+	<string>1.0.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -50,15 +50,15 @@
 	<key>NSCameraUsageDescription</key>
 	<string>Showing AR contents on the camera screen.</string>
 	<key>NSLocationUsageDescription</key>
-	<string>Showing user&apos;s location on the map.</string>
+	<string>Showing user's location on the map.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Showing user&apos;s location on the map.</string>
+	<string>Showing user's location on the map.</string>
 	<key>NSMainNibFile</key>
 	<string>MainWindow</string>
 	<key>NSMainNibFile~ipad</key>
 	<string>MainWindow-iPad</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This application doesn&apos;t access the Photo Library.&apos;</string>
+	<string>This application doesn't access the Photo Library.'</string>
 	<key>UIApplicationExitsOnSuspend</key>
 	<false/>
 	<key>UIRequiredDeviceCapabilities</key>
